--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
             <ul>
                 <li>
                     <a href="">Студія</a>
